Service PUT the orders/orderId and customers/customerId/orders/orderId
